--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ google-cloud-vision==3.4.5
 requests==2.31.0
 ffmpeg-python==0.2.0
 python-dotenv==1.0.0
+pytesseract==0.3.10
+pillow==10.1.0
+numpy==1.24.3
