--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ pytesseract==0.3.10
 pillow==10.1.0
 python-dotenv==1.0.0
 opencv-python-headless==4.9.0.80
-numpy==1.24.3
+numpy==1.26.4  # Обновлено до последней версии
